fix overflow-y on descriptions

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,6 @@ ul.nav li {
 	transition: opacity 1s, transform 1s;
 	z-index: 999;
 	transform: translateY(-25px);
-	overflow-y: scroll;
 }
 
 
